log
Tue, Apr 15, 2025  6:38:10 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025  6:38:25 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^
cc1.exe: all warnings being treated as errors
e2ffb6b
Tue, Apr 15, 2025  6:39:40 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^
cc1.exe: all warnings being treated as errors
0b007df
Tue, Apr 15, 2025  6:42:36 PM: 
 tests:  0|6
total_score: 0/70
e2d1b2e
Tue, Apr 15, 2025  6:42:52 PM: 
 hashmap.c | 77 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 74 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:74:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (long i = 0; i < old_capacity; i++) {
     ^
hashmap.c:74:5: note: use option -std=c99, -std=gnu99, -std=c11 or -std=gnu11 to compile your code
hashmap.c: In function 'firstMap':
hashmap.c:127:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (long i = 0; i < map->capacity; i++) {
     ^
hashmap.c: In function 'nextMap':
hashmap.c:140:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (long i = map->current + 1; i < map->capacity; i++) {
     ^
d137817
Tue, Apr 15, 2025  6:43:07 PM: 
 tests:  17|0
total_score: 70/70
2b286c7
Tue, Apr 15, 2025  7:22:08 PM: 
 hashmap.c | 78 ++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 47 insertions(+), 31 deletions(-)
 tests:  17|0
total_score: 70/70
aab5526
